[package]
description = "Dremio Rust client"
edition = "2021"
license = "MIT"
name = "dremio-rs"
version = "0.2.0"
repository = "https://github.com/vrd83/dremio-rs"

[dependencies]
arrow = "54.0.0"
arrow-flight = { version = "54.0.0", features = ["flight-sql-experimental"] }
futures = "0.3.31"
parquet = "54.0.0"
thiserror = "2.0.12"
tonic = "0.12.3"

[dev-dependencies]
testcontainers = "0.23.1"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = "0.12.12"
